added files and changed home page and about
Added files so I can work on the fluid design and media query. I also added more text to the about me section. As a result I need to add some more margin to my css

--- a/About.html
+++ b/About.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Jacob's Profile</title>
-    <link rel="stylesheet" type="text/css" href="HomePage.css">
+    <link rel="stylesheet" type="text/css" href="StyleSheet.css">
+    <link href="laptop.css" rel="stylesheet" type="text/css" media="only screen and (min-width:960px)">
+    <link href="tablet.css" rel="stylesheet" type="text/css" media="only screen and (min-wodth:960) and (max-width:959px)">
+    <link href="mobile.css" rel="stylesheet" type="text/css" media="only screen and (max-width:480)">
 </head>
 <body>
     <header>
@@ -24,7 +27,14 @@
             <img src="IMG_4265.jpg" alt="Jacob's Photo">
         </div>
         <div id="right-column">
-            <h3>My name is Jacob. I am a second year student at Ontario Tech University. I am in the IT Networking and Information Security program. </h3>
+            <h3>My name is Jacob. I am a second year student at Ontario Tech University.
+                I am in the IT Networking and Information Security program. 
+                I look forward to learning more of networking, cybersecurity and programming.
+                I had a little programming knowledge before starting university. From grades 10-12 I did python in my computer science classes.
+                We had done html for a little bit during this time but we never got far. This web and script programming class is 
+                something fairly new, because of this it is very exciting. 
+
+            </h3>
         </div>
         <div id="intro-vid">
             <video width="360" height="220" controls poster="aboutposter.png" preload="auto" muted id="myvid">
