--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jacob's Profile</title>
-    <link rel="stylesheet" type="text/css" href="HomePage.css">
+    <link rel="stylesheet" type="text/css" href="StyleSheet.css">
+    <link href="laptop.css" rel="stylesheet" type="text/css" media="only screen and (min-width:960px)">
+    <link href="tablet.css" rel="stylesheet" type="text/css" media="only screen and (min-wodth:960) and (max-width:959px)">
+    <link href="mobile.css" rel="stylesheet" type="text/css" media="only screen and (max-width:480)">
 </head>
 <body>
     <header>
