--- a/About.html
+++ b/About.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Jacob's Profile</title>
@@ -39,7 +39,6 @@
                 <source src="aboutvid.ogv" type="video/ogg">
             </video>
             <br>
-            <button onclick="PlayPause()">Play/Pause Video</button>
             <script>
                 var mybtn=document.getElementById("myvid");
                 function PlayPause()
@@ -50,29 +49,14 @@
                         mybtn.pause();
                 }
             </script>
-            <style>
-                button{
-                    background-color: white;
-                    color: rgb(70, 99, 172);
-                    height: 50px;
-                    border: 2px whitesmoke;
-                    border-radius: 5px;
-                }
-                button:hover
-                {
-                    background-color: rgb(70, 99, 172);
-                    color: white;
-                    border: 2px whitesmoke;
-                    border-radius: 5px;
-                }
-            </style>
+            
         </div>
     </div>
 
     <footer>
         <address id="footer">
-            <h5>© 2024 by Jacob Bryan</h5>
-            <h5>jacob.bryan@ontariotechu.net</h5>
+            <p>© 2024 by Jacob Bryan</p>
+            <p>jacob.bryan@ontariotechu.net</p>
         </address>
     </footer>
 </body>
