--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -30,8 +32,9 @@
     </div>
     <footer>
         <address id="footer">
-            <h5>© 2024 by Jacob Bryan</h5>
-            <h5>jacob.bryan@ontariotechu.net</h5>
+            <p>© 2024 by Jacob Bryan</p>
+            <p>jacob.bryan@ontariotechu.net</p>
         </address>
     </footer>
 </body>
+</html>
