--- a/Projects.html
+++ b/Projects.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Jacob's Profile</title>
@@ -24,31 +24,31 @@
             <img src="network-topology.png" alt="Networking Photo">
         </div>
         <div class="description">
-            <section>The above image is the topology of my case study project in my Introduction to Networking Two. 
+            <div>The above image is the topology of my case study project in my Introduction to Networking Two. 
                 In the project, my group was tasked to develop a pilot network capable of being integrated 
                 such that all branches will be connected through a dedicated WAN connection using
-                BGP and can be managed completely remotely from the Ontario Tech Residence.</section>
-            <section>This project served as a great challenge that tested the skills we had learned in the lectures and practiced during our labs.</section>
+                BGP and can be managed completely remotely from the Ontario Tech Residence.</div>
+            <div>This project served as a great challenge that tested the skills we had learned in the lectures and practiced during our labs.</div>
         </div>
         <div class="network-image_2">
             <img src="network-topology-2.png" alt="Networking Photo">
         </div>
         <div class="description_2">
-            <section>The above image is the topology of my case study project in my first Introduction to Networking course. 
+            <div>The above image is the topology of my case study project in my first Introduction to Networking course. 
                 The following diagram shows the topology of a corporate network consisting of three buildings that my partner and I had to set up. 
                 Each building contains a number of PCs and a switched LAN. 
                 Two buildings are connected to a core router, which is connected to a Gateway router. 
                 A remote site (Building 3) is connected to a remote site router that is connected separately to the Gateway router.
                 The Gateway router has a single connection to an Internet server with IP address 108.0.0.1. 
                 The link between the Gateway router and the Internet server uses the subnet 108.0.0.0/30.
-            </section>
-            <section>This project served as a great first-time experience with a network that was bigger than what we dealt with in our labs.</section>
+            </div>
+            <div>This project served as a great first-time experience with a network that was bigger than what we dealt with in our labs.</div>
         </div>
     </div>
     <footer>
         <address id="footer">
-            <h5>© 2024 by Jacob Bryan</h5>
-            <h5>jacob.bryan@ontariotechu.net</h5>
+            <p>© 2024 by Jacob Bryan</p>
+            <p>jacob.bryan@ontariotechu.net</p>
         </address>
     </footer>
 </body>
