--- a/About.html
+++ b/About.html
@@ -25,11 +25,11 @@
         </div>
         <div id="right-column">
             <p>My name is Jacob. I am a second-year student at Ontario Tech University. 
-                I am in the IT Networking and Information Security program. 
+                I am currently enrolled in the IT Networking and Information Security program. 
                 I look forward to learning more about networking, cybersecurity, and programming. 
-                I had some programming knowledge before starting university. 
+                I have had some programming knowledge before starting university. 
                 From grades 10 to 12, I studied Python in my computer science classes. 
-                We did a little HTML during this time, but we never got far. 
+                We covered an introduction to HTML, but never got in depth. 
                 This web and scripting programming class is something fairly new for me, and because of this, it is very exciting.
             </p>
         </div>
