--- a/About.html
+++ b/About.html
@@ -29,7 +29,7 @@
                 I look forward to learning more about networking, cybersecurity, and programming. 
                 I have had some programming knowledge before starting university. 
                 From grades 10 to 12, I studied Python in my computer science classes. 
-                We covered an introduction to HTML, but never got in depth. 
+                We covered an introduction to HTML, but never studied in depth. 
                 This web and scripting programming class is something fairly new for me, and because of this, it is very exciting.
             </p>
         </div>
